# robot-rumble-rs

./: .gitignore  Cargo.toml  README.md  clippy.toml  flake.nix  justfile  map.ron  shell.nix
.cargo/: config.toml
.github/: pull_request_template.md
.github/workflows/: release.yaml  rust.yml
.helix/: config.toml
assets/: planet_kinds.ron
assets/config/: config.network.ron  config.planets.ron  config.projectiles.ron  config.satellites.ron  config.weapons.ron  network.ron  planet_kinds.ron  projectiles.ron  satellites.ron  skins.ron  weapons.ron  worldgen.ron
assets/config/skins/: laika.skin.ron
assets/levels/: big-circular-dense.ron  big-circular-only_big_planets-sparse.ron  big-circular-sparse.ron  big-clustered-sparse.ron  big-linear-dense.ron  big-no_overlapping.ron  medium-circular-dense.ron  medium-clustered-sparse.ron  medium-fortress_like.ron  medium-linear-dense.ron  medium-milkiway_scatter-sparse.ron  small-circular-dense.ron  small-fortress_like.ron  small-linear-dense.ron  small-milkyway_scatter-sparse.ron  small-strong_sun.ron
assets/shaders/: orbit.wgsl
assets/shaders/background/: nebulae.wgsl  stars.wgsl
assets/shaders/planet/: black_hole.wgsl  black_hole_ring.wgsl  clouds.wgsl  common.wgsl  craters.wgsl  dry_terrain.wgsl  earth_like.wgsl  gas_layers.wgsl  lakes.wgsl  landmasses.wgsl  planet_under.wgsl  ring.wgsl  star.wgsl  star_blobs.wgsl  star_flares.wgsl  under.wgsl
assets/ui/: hud.cob  main.cob
assets/ui/menu/: home.cob  matchmaking_setup.cob  splitscreen_setup.cob
client/: Cargo.toml
client/assets/config/: network.ron  skins.ron
client/assets/shaders/background/: nebulae.wgsl  stars.wgsl
client/src/: network.rs
client/src/core/: camera.rs  mod.rs
client/src/entities/: bullet.rs  mod.rs  player.rs
client/src/entities/planet/: config.rs  mod.rs
client/src/entities/planet/materials/: dry_terrain.rs  gas_layers.rs  lakes.rs  mod.rs  ring.rs
client/src/entities/player/: animation.rs  mod.rs  skin.rs
client/src/network/: config.rs  mod.rs
client/src/utils/: gradient.rs  mod.rs  spritesheet.rs
common/: Cargo.toml
common/src/: lib.rs
common/src/core/: gravity.rs  mod.rs  physics.rs
common/src/entities/: bullet.rs  mod.rs  planet.rs  player.rs
common/src/network/: mod.rs  protocol.rs
docs/: README.md
server/: Cargo.toml
server/src/: main.rs  network.rs
server/src/entities/: mod.rs  player.rs
src/: assets.rs  lib.rs  main.rs  server.rs
src/components/: physics.rs
src/core/: audio.rs  background.rs  camera.rs  collision.rs  gravity.rs  inputs.rs  interpolation.rs  mod.rs  physics.rs  spritesheet.rs  voronoi.rs  worldgen.rs
src/core/worldgen/: mod.rs  voronoi.rs
src/entities/: bullet.rs  mod.rs  planet.rs  player.rs
src/entities/blackhole/: mod.rs  visuals.rs
src/entities/planet/: config.rs  kinds.rs  mod.rs  planet_materials.rs
src/entities/planet/kinds/: mod.rs
src/entities/planet/materials/: blackhole.rs  blackhole_ring.rs  clouds.rs  common.rs  craters.rs  dry_terrain.rs  gas_layers.rs  lakes.rs  landmasses.rs  mod.rs  ring.rs  star.rs  star_blobs.rs  star_flares.rs  under.rs
src/entities/player/: animation.rs  inventory.rs  mod.rs  skin.rs
src/entities/player/weapon/: assets.rs  config.rs  mod.rs  sfx.rs
src/entities/player/weapons/: config.rs  mod.rs
src/entities/projectile/: config.rs  mod.rs
src/entities/satellite/: assets.rs  bumper.rs  grabber.rs  graviton.rs  mod.rs  orbit_material.rs  satellite.rs  slingshot.rs  visuals.rs
src/level/: limit.rs  map_limit.rs  mod.rs  save.rs  spawn.rs
src/misc/: discord_presence.rs  mod.rs
src/network/: client.rs  config.rs  inputs.rs  mod.rs  protocol.rs  server.rs  shared.rs  synctest.rs
src/systems/: gravity.rs
src/tools/map_editor/: controller.rs  interaction.rs  main.rs  model.rs  savefile.rs  utils.rs  view.rs
src/ui/: hud.rs  mod.rs
src/ui/menu/: home.rs  matchmaking_setup.rs  mod.rs  splitscreen_setup.rs
src/ui/menus/: home.rs  matchmaking_setup.rs  mod.rs  splitscreen_setup.rs
src/ui/widgets/: mod.rs
src/utils/: geo.rs  gradient.rs  math.rs  mod.rs  poisson.rs  spritesheet.rs  voronoi.rs
