cargo-features = ["codegen-backend"]

[package]
name = "robot-rumble"
version = "0.1.0"
edition = "2024"
default-run = "robot-rumble"

[features]
default = ["dev_tools", "discord_presence"]
dev_tools = [
  "dep:bevy-inspector-egui",
  "bevy/file_watcher",
  "bevy/bevy_dev_tools",
  "bevy/bevy_mesh_picking_backend",
]
embedded_assets = ["dep:bevy_embedded_assets"]
discord_presence = ["dep:discord-presence"]

[lib]
name = "robot_rumble"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"] # Needed for Android

[[bin]]
name = "robot-rumble"
path = "src/main.rs"

[[bin]]
name = "map-editor"
path = "src/tools/map_editor/main.rs"
required-features = ["dev_tools"]

[dependencies]
bevy_common_assets = { version = "0.13", features = ["ron"] }
bevy_ggrs = { version = "0.18", features = ["wasm-bindgen"] }
bevy_matchbox = { version = "0.12", features = ["ggrs"] }
bevy_embedded_assets = { version = "0.13.0", optional = true }
bevy-inspector-egui = { version = "0.31", optional = true }
leafwing-input-manager = "0.17"
rand_xoshiro = "0.7.0"
rand = "0.9.0"
ron = "0.8"
getrandom = { version = "0.3", features = ["wasm_js"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5.32", features = ["derive"] }
serde_with = "3.12.0"
discord-presence = { version = "1.6.0", optional = true }

[dependencies.bevy]
version = "0.16"
default-features = false
features = [
  "std",
  "async_executor",
  "configurable_error_handler",

  "android-native-activity",
  "android_shared_stdcxx",

  "multi_threaded",
  "bevy_asset",
  "bevy_audio",
  "bevy_gilrs",
  "bevy_winit",
  "bevy_render",
  "bevy_sprite",
  "bevy_state",
  "bevy_ui",
  "default_font",

  "png",
  "vorbis",

  "x11",
  "wayland",
  "webgl2",

  "asset_processor",

  # Support for deterministic float primitives
  "libm",
]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
codegen-backend = "cranelift"

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "fat"

[profile.wasm-release]
inherits = "release"
opt-level = "z"
strip = "symbols"
panic = 'abort'

# Android metadata

[package.metadata.android]
package = "org.gasdev.robotrumble"
apk_name = "robot-rumble"
strip = "strip"
# see https://github.com/rust-mobile/cargo-apk
assets = "assets"
build_targets = ["aarch64-linux-android", "armv7-linux-androideabi"]

[package.metadata.android.sdk]
target_sdk_version = 35
min_sdk_version = 30

[package.metadata.android.application]
label = "Robot Rumble"
